Fix filter overflowing, and one bug

--- a/src/style/components/filter-dropdown.scss
+++ b/src/style/components/filter-dropdown.scss
@@ -3,6 +3,7 @@
 
 .s-filter-drop-down__pills {
   display: inline-flex;
+  overflow: hidden;
   padding: 0 2px;
 }
 
